tests/rosetta/transpiler/FS/find-palindromic-numbers-in-both-binary-and-ternary-bases.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/find-palindromic-numbers-in-both-binary-and-ternary-bases.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Find-palindromic-numbers-in-both-binary-and-ternary-bases' based on the file name 'find-palindromic-numbers-in-both-binary-and-ternary-bases.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/find-palindromic-numbers-in-both-binary-and-ternary-bases.fs(72,34): error FS0039: The value or constructor 'parseIntStr' is not defined
